BC
In file included from /home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/legacy.h:33:0,
                 from /home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/io.h:31,
                 from /home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/consumer.h:30,
                 from /home/dexter/Syncsort/avro-apache-git/lang/c/src/avro.h:28,
                 from sample.c:2:
sample.c: In function ‘write_avro’:
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:408:71: error: expected expression before ‘)’ token
      (value)->iface->method((value)->iface, (value)->self, __VA_ARGS__))
                                                                       ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:467:5: note: in expansion of macro ‘avro_value_call’
     avro_value_call(value, set_string, EINVAL, str)
     ^
sample.c:125:21: note: in expansion of macro ‘avro_value_set_string’
                     avro_value_set_string(&field, /*Data Value*/);
                     ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:408:71: error: expected expression before ‘)’ token
      (value)->iface->method((value)->iface, (value)->self, __VA_ARGS__))
                                                                       ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:461:5: note: in expansion of macro ‘avro_value_call’
     avro_value_call(value, set_int, EINVAL, val)
     ^
sample.c:129:21: note: in expansion of macro ‘avro_value_set_int’
                     avro_value_set_int(&field, /*atoi(DataValue)*/);
                     ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:408:71: error: expected expression before ‘)’ token
      (value)->iface->method((value)->iface, (value)->self, __VA_ARGS__))
                                                                       ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:463:5: note: in expansion of macro ‘avro_value_call’
     avro_value_call(value, set_long, EINVAL, val)
     ^
sample.c:133:21: note: in expansion of macro ‘avro_value_set_long’
                     avro_value_set_long(&field, /*atol(DataValue)*/);
                     ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:408:71: error: expected expression before ‘)’ token
      (value)->iface->method((value)->iface, (value)->self, __VA_ARGS__))
                                                                       ^
/home/dexter/Syncsort/avro-apache-git/lang/c/src/avro/value.h:459:5: note: in expansion of macro ‘avro_value_call’
     avro_value_call(value, set_float, EINVAL, val)
     ^
sample.c:137:21: note: in expansion of macro ‘avro_value_set_float’
                     avro_value_set_float(&field, /*atof(DataValue)*/);
                     ^
sample.c:141:27: error: called object ‘stderr’ is not a function or function pointer
                     stderr("Unknown Format!");
                           ^
In file included from sample.c:1:0:
/usr/include/stdio.h:170:25: note: declared here
 extern struct _IO_FILE *stderr;  /* Standard error output stream.  */
                         ^
